// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.IS1 {
  flex: 1;
}

.IS2 {
  color: rgba(255,255,255,1.00);
  font-size: 35px;
  line-height: 35px;
  margin-top: 5px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <h3
        aria-level="3"
        className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
        role="heading"
      >
        This is tile headline
      </h3>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`tile n medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.IS1 {
  flex: 1;
}

.IS2 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
}

.IS3 {
  color: rgba(204,204,204,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 14px;
  line-height: 20px;
  padding-bottom: 0px;
  padding-top: 5px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <h3
        aria-level="3"
        className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="css-reset-4rbku5 css-text-901oao IS3"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`tile n small 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Regular;
  line-height: 21px;
}

.IS1 {
  flex: 1;
}

.IS2 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
}

.IS3 {
  font-size: 14px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <h3
        aria-level="3"
        className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="css-reset-4rbku5 css-text-901oao r-color-1khp51w r-fontFamily-4h8ur4 r-lineHeight-10yl4k r-paddingBottom-1mi0q7o IS3 S3"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`tile n wide 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.IS1 {
  flex: 1;
}

.IS2 {
  color: rgba(255,255,255,1.00);
  font-size: 28px;
  line-height: 28px;
}

.IS3 {
  color: rgba(204,204,204,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 14px;
  line-height: 20px;
  padding-bottom: 0px;
  padding-top: 5px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <h3
        aria-level="3"
        className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="css-reset-4rbku5 css-text-901oao IS3"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`tile n with default star 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Regular;
  line-height: 21px;
}

.IS1 {
  flex: 1;
}

.IS2 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
}

.IS3 {
  font-size: 14px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <h3
        aria-level="3"
        className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="css-reset-4rbku5 css-text-901oao r-color-1khp51w r-fontFamily-4h8ur4 r-lineHeight-10yl4k r-paddingBottom-1mi0q7o IS3 S3"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`tile n without breakpoint should be like small 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  font-family: TimesModern-Regular;
  line-height: 21px;
}

.IS1 {
  flex: 1;
}

.IS2 {
  color: rgba(255,255,255,1.00);
  font-size: 18px;
  line-height: 18px;
}

.IS3 {
  font-size: 14px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <h3
        aria-level="3"
        className="css-reset-4rbku5 css-text-901oao r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
        role="heading"
      >
        This is tile headline
      </h3>
      <h4
        aria-level="4"
        className="css-reset-4rbku5 css-text-901oao r-color-1khp51w r-fontFamily-4h8ur4 r-lineHeight-10yl4k r-paddingBottom-1mi0q7o IS3 S3"
        role="heading"
      >
        Three Conservative MPs resign
      </h4>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
      />
    </div>
  </div>
</Link>
`;
